# Autonomoussystems2025

./: .gitattributes  .gitignore  README.md  as3.sh  frames_2026-03-02_13.41.53.gv  octomap_binary.txt  start_jazzy_as3.sh  stop_jazzy_as3.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller_pkg/lib/controller_pkg/: controller_node
install/controller_pkg/share/ament_index/resource_index/parent_prefix_path/: controller_pkg
install/controller_pkg/share/controller_pkg/: local_setup.sh  package.sh
install/mapping_pkg/share/ament_index/resource_index/parent_prefix_path/: mapping_pkg
install/mapping_pkg/share/mapping_pkg/: local_setup.dsv  package.sh
install/mapping_pkg/share/mapping_pkg/config/: voxel_params.yaml
install/mapping_pkg/share/mapping_pkg/launch/: octomap.launch.py  pointcloud.launch.py
install/mav_msgs/include/mav_msgs/mav_msgs/msg/detail/: actuators__struct.hpp  attitude_thrust__description.c  attitude_thrust__struct.hpp  filtered_sensor_data__struct.hpp  gps_waypoint__struct.hpp  rate_thrust__struct.hpp  roll_pitch_yawrate_thrust__description.c  status__struct.hpp  torque_thrust__description.c  torque_thrust__struct.hpp
install/mav_msgs/share/mav_msgs/: package.sh
install/mav_planning_msgs/include/mav_planning_msgs/mav_planning_msgs/msg/detail/: point_cloud_with_pose__description.c  polygon_with_holes_stamped__description.c  polynomial_segment4_d__struct.hpp  polynomial_segment__struct.hpp  polynomial_trajectory__description.c  polynomial_trajectory__struct.hpp
install/mav_planning_msgs/share/mav_planning_msgs/: package.sh
install/takeoff_pkg/include/takeoff_pkg/: takeoff_node.hpp
install/takeoff_pkg/share/ament_index/resource_index/package_run_dependencies/: takeoff_pkg
install/takeoff_pkg/share/takeoff_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/takeoff_pkg/share/takeoff_pkg/config/: takeoff_params.yaml
log/: latest_build
ros2_ws/: .gitattributes  AUTONOMOUS_EXPLORATION_GUIDE.md  DEPENDENCIES_INSTALLATION.md  DEPENDENCIES_QUICK_REF.md  TROUBLESHOOTING_CN.md  check_dependencies.sh  check_system.sh  frames_2026-03-03_00.46.30.gv  install_dependencies.sh  monitor_flight.sh
ros2_ws/src/basic_waypoint_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/basic_waypoint_pkg/config/: trajectory_config.yaml
ros2_ws/src/basic_waypoint_pkg/include/basic_waypoint_pkg/: planner.hpp
ros2_ws/src/basic_waypoint_pkg/launch/: waypoint_mission.launch.py
ros2_ws/src/basic_waypoint_pkg/src/: planner.cc  planner_node.cc
ros2_ws/src/controller_pkg/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/controller_pkg/include/controller_pkg/: controller_node.hpp
ros2_ws/src/controller_pkg/src/: controller_node.cpp
ros2_ws/src/lantern_detector_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/lantern_detector_pkg/config/: lantern_detector.yaml
ros2_ws/src/lantern_detector_pkg/include/lantern_detector_pkg/: lantern_detector_node.hpp
ros2_ws/src/lantern_detector_pkg/launch/: lantern_detector.launch.py
ros2_ws/src/lantern_detector_pkg/src/: lantern_detector_main.cpp  lantern_detector_node.cpp
ros2_ws/src/mapping_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/mapping_pkg/config/: octomap_params.yaml
ros2_ws/src/mapping_pkg/launch/: mapping.launch.py  octomap.launch.py  pointcloud.launch.py
ros2_ws/src/mav_trajectory_generation/: CMakeLists.txt  package.xml
ros2_ws/src/mav_trajectory_generation/include/mav_trajectory_generation/: trajectory_sampler_node.hpp
ros2_ws/src/mav_trajectory_generation/src/: trajectory_sampler_node.cpp
ros2_ws/src/path_planner_pkg/: CMakeLists.txt  JAZZY_MIGRATION.md  README.md  package.xml
ros2_ws/src/path_planner_pkg/config/: path_planner_params.yaml
ros2_ws/src/path_planner_pkg/include/path_planner_pkg/: path_planner_node.hpp
ros2_ws/src/path_planner_pkg/launch/: path_planner.launch.py
ros2_ws/src/path_planner_pkg/simulation/: path_planning_simulation.py
ros2_ws/src/path_planner_pkg/src/: astar_planner.cpp  occupancy_map.cpp  path_planner_node.cpp  rrt_explorer.cpp
ros2_ws/src/perception/: CMakeLists.txt  README .md  package.xml
ros2_ws/src/perception/launch/: perception.launch.py
ros2_ws/src/perception/src/: light_detection_node.cpp
ros2_ws/src/planner_pkg/: CMakeLists.txt  INTEGRATION.md  README.md  package.xml
ros2_ws/src/planner_pkg/include/planner_pkg/: Optics.hpp  explorer_node.hpp  simple_trajectory_planner.hpp
ros2_ws/src/planner_pkg/launch/: exploration_system.launch.py  planner.launch.py
ros2_ws/src/planner_pkg/src/: explorer_node.cpp  simple_trajectory_planner.cpp
ros2_ws/src/simulation/launch/: full_system.launch.py  simulation.launch.py  test_flight.launch.py  unity_test.launch.py
ros2_ws/src/state_machine/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/state_machine/include/state_machine/: state_machine.hpp
ros2_ws/src/state_machine/launch/: full_mission.launch.py  full_system.launch.py  state_machine.launch.py
ros2_ws/src/state_machine/msg/: Answer.msg  Command.msg
ros2_ws/src/state_machine/src/: state_machine.cpp
ros2_ws/src/system_bringup/: package.xml  setup.py
ros2_ws/src/system_bringup/launch/: bringup.launch.py
ros2_ws/src/takeoff_pkg/: package.xml
ros2_ws/src/takeoff_pkg/config/: takeoff_params.yaml
ros2_ws/src/takeoff_pkg/launch/: takeoff.launch.py
ros2_ws/src/takeoff_pkg/src/: takeoff_node.cpp
ros2_ws/src/waypoint_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/waypoint_pkg/config/: waypoint_params.yaml
ros2_ws/src/waypoint_pkg/include/waypoint_pkg/: waypoint_node.hpp
ros2_ws/src/waypoint_pkg/launch/: waypoint.launch.py
ros2_ws/src/waypoint_pkg/src/: waypoint_node.cpp
src/controller_pkg/include/controller_pkg/: controller_node.hpp
src/controller_pkg/src/: controller_node.cpp
src/simulation/: CMakeLists.txt
src/simulation/launch/: simulation.launch.py
src/takeoff_pkg/: CMakeLists.txt
src/takeoff_pkg/launch/: takeoff.launch.py
(+3 files in other folders)
