<?xml version="1.0"?>
<package format="3">
  <name>basic_waypoint_pkg</name>
  <version>0.0.0</version>
  <description>The basic_waypoint_pkg package</description>

  <maintainer email="lukas.pries@tum.de">Lukas Pries</maintainer>
  <license>TODO</license>

  <!-- ROS2 build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Node implementation -->
  <depend>rclcpp</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- MAV planning/trajectory -->
  <depend>mav_msgs</depend>
  <depend>mav_planning_msgs</depend>
  <depend>mav_trajectory_generation</depend>

  <!-- TF -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Non-ament CMake libs used in code -->
  <depend>Eigen3</depend>
  <depend>yaml-cpp</depend>

  <depend>state_machine</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>