<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planner_pkg</name>
  <version>1.0.0</version>
  <description>
    UAV path planning package for autonomous cave exploration.
    Implements A* search algorithm and RRT exploration for 3D occupancy grid maps.
    Integrates with the ROS2-based simulation framework for the TUM AAS 2025 challenge.
  </description>
  <maintainer email="student@tum.de">AAS Group</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 核心依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>builtin_interfaces</depend>

  <!-- 自定义消息依赖（来自state_machine包）-->
  <depend>state_machine</depend>

  <!-- 数学库 -->
  <!-- Eigen3 通过 CMake 直接查找，Jazzy 不再需要 eigen3_cmake_module -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
