<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planner_pkg</name>
  <version>1.0.0</version>
  <description>Frontier-based autonomous exploration planner for ROS2</description>
  <maintainer email="your_email@tum.de">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <!-- State machine integration -->
  <depend>state_machine</depend>
  
  <!-- MAV trajectory generation -->
  <depend>mav_planning_msgs</depend>
  <depend>mav_trajectory_generation</depend>
  
  <!-- PCL dependencies -->
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  
  <!-- Octomap dependencies -->
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  
  <!-- Eigen -->
  <depend>eigen</depend>
  
  <!-- TF -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
